B-F Sandbox Full-Backup/src/objects/Time_Tracking__c.object
<CustomObject>
    <description>PARX - Jochen Schrader: P00002 Germany needs to track the times for their sales reps easily to compare this to the sums of the actual times.</description>
    <fields>
        <fullName>Event__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: P00002 Event days in the selected Month</description>
        <inlineHelpText>Event days in the selected Month</inlineHelpText>
        <label>Event</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Illness__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: P00002 - Number of Illness Days in the selected Month</description>
        <inlineHelpText>Number of Illness Days in the selected Month</inlineHelpText>
        <label>Illness</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: P00002 Meeting Days in the selected Month</description>
        <inlineHelpText>Meeting Days in the selected Month</inlineHelpText>
        <label>Meeting</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>PARX - JS: Month for whch the timecard is vaild, just for the related list</description>
        <formula>TEXT(StartDate_Month__c) &amp; &quot;/&quot; &amp;  Startdate_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_possible_Visits__c</fullName>
        <description>Number of maximum or possible visits for this sales rep</description>
        <formula>Working_Days_left__c *8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of possible Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maintenance of administration effort</description>
        <label>Office</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>PARX - Jochen Schrader Trigger needs this for select of outlet visits</description>
        <formula>Staff_Account__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Holiday__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: P00002 Public Holiday Days in the selected Month</description>
        <inlineHelpText>Public Holiday Days in the selected Month that counts agains the working days</inlineHelpText>
        <label>Public Holiday</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Staff_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PARX - Jochen Schrader: P00002 Account that is related to Staff Member</description>
        <inlineHelpText>Account that is related to Staff Member</inlineHelpText>
        <label>Staff Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Tracking</relationshipLabel>
        <relationshipName>Time_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate_Month__c</fullName>
        <description>PARX - Jochen Schrader: needed to select the time tracking records by outlet visit trigger</description>
        <formula>Month(StartDate__c)+(Year(StartDate__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartDate Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>Date(Year(Today()),Month(Today()),1 )</defaultValue>
        <description>PARX - Jochen Schrader: P00002 The Start Date you are working for B-F this month.</description>
        <inlineHelpText>The Start Date you are working for B-F this month.</inlineHelpText>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Startdate_Year__c</fullName>
        <formula>TEXT(Year(StartDate__c))</formula>
        <label>Startdate Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Fair__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: Days you were visiting a trade fair</description>
        <inlineHelpText>Days you were visiting a trade fair</inlineHelpText>
        <label>Trade Fair</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: P00002 Days on Training in the selected Month</description>
        <inlineHelpText>Days on Training in the selected Month</inlineHelpText>
        <label>Training</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PARX - Jochen Schrader: P00002 Number of Vacation Days in the selected Month</description>
        <inlineHelpText>Number of Vacation Days in the selected Month</inlineHelpText>
        <label>Vacation</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Days__c</fullName>
        <description>PARX - Jochen Schrader: P00002 Monthly Working Days - Calculated by Workflow because formular is too big</description>
        <inlineHelpText>Monthly Working Days</inlineHelpText>
        <label>Working Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Working_Days_left__c</fullName>
        <description>PARX - Jochen Schrader: P00002 left over Working Days for the selected Month</description>
        <formula>Working_Days__c  - Meeting__c - Public_Holiday__c - Trade_Fair__c - Training__c - Vacation__c - Event__c - Illness__c-Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>left over Working Days for the selected Month</inlineHelpText>
        <label>Working Days left</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Tracking</label>
    <nameField>
        <displayFormat>T{YYYY}{MM}-{00}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>